--- a/WineLog/WineLog/Info.plist
+++ b/WineLog/WineLog/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>와인의 사진을 틍록하기 위해 앨범에 대한 접근 권한이 필요합니다.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>와인의 사진을 틍록하기 위해 카메라에 대한 접근 권한이 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>PoorStory-Regular.ttf</string>
